tests/negative/neg_pr118c2_unit_scoped_receive.safe
package neg_pr118c2_unit_scoped_receive

   channel inbox : integer capacity 1;

   receive inbox, item : integer
